--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -21,8 +21,29 @@
       <li class="nav-item">
         <%= link_to "New task", new_task_path, class: "nav-link" %>
       </li>
-      
     </ul>
-        <img class="rounded-circle" height="50px" width="50px" src="http://digitalspyuk.cdnds.net/17/25/320x320/square-1498216547-avatar-neytiri.jpg">
   </div>
+  <div class="dropdown">
+    <img class="dropbtn rounded-circle" height="50px" width="50px" src="http://digitalspyuk.cdnds.net/17/25/320x320/square-1498216547-avatar-neytiri.jpg">
+    <div class="dropdown-content">
+      <% unless user_signed_in? %>
+      <li class="nav-item" id="btn-modal1">
+        <button class="modal-btn">Log in</button>
+        <!-- <%= link_to "Log in", new_user_session_path, class: "nav-link"%>-->
+      </li>
+      <li class="nav-item">
+        <button class="modal-btn">Sign up</button>
+        <!-- <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>-->
+      </li>
+      <% else %>
+      <li class="nav-item">
+        <button class="modal-btn">Log out</button>
+        <!-- <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>-->
+      </li>
+      <% end %>
+    </div>
+  </div>
+
 </nav>
+
+
