--- a/app/assets/stylesheets/components/tabs.scss
+++ b/app/assets/stylesheets/components/tabs.scss
@@ -51,7 +51,8 @@
 }
 #content {
   background: #fff;
-  padding: 0px;position: relative;
+  padding: 0px;
+  position: relative;
   z-index: 2;
   text-align: center;
 }
