--- a/app/views/layouts/_modals.html.erb
+++ b/app/views/layouts/_modals.html.erb
@@ -1,6 +1,3 @@
-<!-- Trigger/Open The Modal -->
-<button id="myBtn">Open Modal</button>
-
 <!-- The Modal -->
 <div id="myModal" class="modal">
   <!-- Modal content for Sign up form -->
@@ -30,19 +27,17 @@
           <%= f.label :password_confirmation %><br />
           <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
         </div>
-
-        <div class="actions">
-          <%= f.submit "Sign up" %>
-        </div>
-      <% end %>
     </div>
     <div class="modal-footer">
+      <div class="actions">
+        <%= f.submit "Sign up", class:'mdl-btn' %>
+      </div>
+      <% end %>
       <%= render "devise/shared/links" %>
     </div>
   </div>
 
-
-   <!-- Modal content for Sign up form -->
+  <!-- Modal content for Sign up form -->
   <div class="modal-content">
     <div class="modal-header">
       <h2>Log in</h2>
@@ -66,49 +61,14 @@
             <%= f.label :remember_me %>
           </div>
         <% end -%>
-
-        <div class="actions">
-          <%= f.submit "Log in" %>
-        </div>
-      <% end %>
     </div>
     <div class="modal-footer">
+      <div class="actions">
+          <%= f.submit "Log in", class:'mdl-btn' %>
+        </div>
+      <% end %>
       <%= render "devise/shared/links" %>
     </div>
   </div>
 
 </div>
-
-
-
-
-
-
-
-<script>
-// Get the modal
-var modal = document.getElementById('myModal');
-
-// Get the button that opens the modal
-var btn = document.getElementById("myBtn");
-
-// Get the <span> element that closes the modal
-var span = document.getElementsByClassName("close")[0];
-
-// When the user clicks on the button, open the modal 
-btn.onclick = function() {
-    modal.style.display = "flex";
-}
-
-// When the user clicks on <span> (x), close the modal
-span.onclick = function() {
-    modal.style.display = "none";
-}
-
-// When the user clicks anywhere outside of the modal, close it
-window.onclick = function(event) {
-    if (event.target == modal) {
-        modal.style.display = "none";
-    }
-}
-</script>
