--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,25 +1,24 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-    <%= link_to "Sandbox App", root_path, class: "navbar-brand" %>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-
+<nav class="topnav" id="myTopnav">
+  <%= link_to "Sandbox App", root_path, class: "navbar-main" %>
+  <div>
+    <ul class="navbar-list">
       <% unless user_signed_in? %>
-      <li class="nav-item">
-        <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
+      <li class="navbar-item">
+        <p id="mdl-btn" class="modal-btn">Modal Log</p>
       </li>
-      <li class="nav-item">
-        <%= link_to "Sign up", new_user_registration_path, class: "nav-link" %>
+      <li class="navbar-item">
+        <%= link_to "Log in", new_user_session_path, class: "navbar-link modal-btn" %>
+      </li>
+      <li class="nnavbarav-item">
+        <%= link_to "Sign up", new_user_registration_path, class: "navbar-link modal-btn" %>
       </li>
       <% else %>
-      <li class="nav-item">
-        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+      <li class="navbar-item">
+        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "navbar-link" %>
       </li>
       <% end %>
-      <li class="nav-item">
-        <%= link_to "New task", new_task_path, class: "nav-link" %>
+      <li class="navbar-item">
+        <%= link_to "New task", new_task_path, class: "navbar-link" %>
       </li>
     </ul>
   </div>
@@ -27,7 +26,7 @@
     <img class="dropbtn rounded-circle" height="50px" width="50px" src="http://digitalspyuk.cdnds.net/17/25/320x320/square-1498216547-avatar-neytiri.jpg">
     <div class="dropdown-content">
       <% unless user_signed_in? %>
-      <li class="nav-item" id="btn-modal1">
+      <li class="nav-item">
         <button class="modal-btn">Log in</button>
         <!-- <%= link_to "Log in", new_user_session_path, class: "nav-link"%>-->
       </li>
@@ -37,13 +36,12 @@
       </li>
       <% else %>
       <li class="nav-item">
-        <button class="modal-btn">Log out</button>
-        <!-- <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>-->
+        <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "btn-logout" %>
       </li>
       <% end %>
     </div>
   </div>
-
+  <a href="javascript:void(0);" class="icon" id="icon">&#9776;</a>
 </nav>
 
 
