small fix on navbar links no modal

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,10 +7,10 @@
         <p id="mdl-btn" class="modal-btn">Modal Log</p>
       </li>
       <li class="navbar-item">
-        <%= link_to "Log in", new_user_session_path, class: "navbar-link modal-btn" %>
+        <%= link_to "Log in", new_user_session_path, class: "navbar-link" %>
       </li>
       <li class="nnavbarav-item">
-        <%= link_to "Sign up", new_user_registration_path, class: "navbar-link modal-btn" %>
+        <%= link_to "Sign up", new_user_registration_path, class: "navbar-link" %>
       </li>
       <% else %>
       <li class="navbar-item">
