--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -10,14 +10,21 @@ textarea {
   -webkit-transition: .333s ease top, .333s ease opacity;
   transition: .333s ease top, .333s ease opacity;
 }
-.form-control {
+
+#task_Category {
+  background-color: white;
+  width: 100%;
+  padding: 5px;
+  color: rgb(110, 110, 110);
+}
+.form-control, #task_Category {
   border-radius: 0;
   border-color: #ccc;
     border-width: 0 0 2px 0;
     border-style: none none solid none;
     box-shadow: none;
 }
-.form-control:focus {
+.form-control:focus, #task_Category:focus {
   box-shadow: none;
   border-color: #5e9bfc;
 }
