--- a/app/views/tasks/_task_list.html.erb
+++ b/app/views/tasks/_task_list.html.erb
@@ -1,9 +1,9 @@
-<ul>
+<ul id='tab-list'>
   <% @tasks.each do |task|  %>
     <li>
       <%= task.title %>,
       "Deadline : " <%=  task.deadline.strftime("%D")  %>
-       <%= link_to "Edit this task", edit_task_path(task) %>
+      <%= link_to "Edit this task", edit_task_path(task) %>
     </li>
   <% end %>
 </ul>
