--- a/app/views/tasks/create.js.erb
+++ b/app/views/tasks/create.js.erb
@@ -1,4 +1,4 @@
 $(document).ready(function() {
   let new_task = $("<%= j (render 'layouts/task', task: @task) %>");
-  $(new_task).appendTo('ul#tab-list').slideDown();
+  $(new_task).appendTo('ul#tab-list').hide().slideDown();
 });
