--- a/app/assets/stylesheets/components/email.scss
+++ b/app/assets/stylesheets/components/email.scss
@@ -21,7 +21,8 @@
 #mail-col-1 {
   border-top-left-radius: 10px;
   border-bottom-left-radius: 10px;
-};
+}
+
 #mail-col-2 {
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
@@ -38,6 +39,7 @@
   margin: 0;
   border: solid 2px white;
   border-radius: 2px;
+  min-width: 150px;
 }
 
 .not-read {
@@ -59,6 +61,7 @@
 .list-object {
   padding:2px;
 }
+
 .list-object li:hover {
   background-color: #08a3ce;
   color: black;
